--- a/css/variables1.css
+++ b/css/variables1.css
@@ -1,7 +1,7 @@
 :root{
     --color-1: #fff;
     --color-2: #ffffff32;
-    --color-3: #109ceb;
+    --color-3: #2294d3;
     --color-4: #016d9e;
 }
 
