--- a/views/home.html
+++ b/views/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style2.css">
+    <link rel="stylesheet" href="../css/pink.css">
     <title>Home Ghibli</title>
 </head>
 <body>
@@ -40,6 +41,28 @@
                 </li>
             </ul>
         </nav>
+        <div class="linea"></div>
+
+        <div class="modo_oscuro">
+            <div class="info">
+                <img src="../storage/img/moon-outline.svg" alt="">
+                <span>PINK MODE</span>
+            </div>
+            <div class="switch">
+                <div class="base">
+                    <div class="circulo">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="linea"></div>
+        
+        <a href="" class="devolver">
+            <img src="../storage/img/arrow-back-circle-outline.svg" alt="">
+            <div class="text">
+                <span>GO BACK</span>
+            </div>
+        </a>
     </div>
     <script src="../javascript/menu.js"></script>
 </body>
