feat: :sparkles: new pictures
new pictures and banner has been added

--- a/views/home.html
+++ b/views/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style2.css">
     <link rel="stylesheet" href="../css/pink.css">
+    <link rel="icon" href="../storage/img/4d6e1b00ca69ff2651584e0374567c4a.png" type="image/x-icon">
     <title>Home Ghibli</title>
 </head>
 <body>
@@ -57,7 +58,7 @@
         </div>
         <div class="linea"></div>
         
-        <a href="" class="devolver">
+        <a href="../index.html" class="devolver">
             <img src="../storage/img/arrow-back-circle-outline.svg" alt="">
             <div class="text">
                 <span>GO BACK</span>
