feat: :lipstick: search bar
Only the design of a search bar was introduced

--- a/views/home.html
+++ b/views/home.html
@@ -65,6 +65,15 @@
             </div>
         </a>
     </div>
+    <header class="barra_busqueda">
+        <div class="buscador">
+            <img src="../storage/img/search-outline.svg" alt="">
+            <input type="text" placeholder="Buscas algo?">
+        </div>
+    </header>
+    <main class="caja_main">
+        
+    </main>
     <script src="../javascript/menu.js"></script>
 </body>
 </html>
