--- a/css/style2.css
+++ b/css/style2.css
@@ -13,12 +13,14 @@ body{
 }
 
 .barra_lateral{
+    position: fixed;
     width: 250px;
     height: 100%;
     overflow: hidden;
     padding: 20px 15px;
     background: var(--color-barra-lateral);
     transition: width 0.5s ease, background 0.3s ease;
+    border-right: 1px var(--color-botones-1) solid;
 }
 .mini_barra_lateral{
     width: 90px;
@@ -194,3 +196,57 @@ body{
 .barra_lateral .devolver .text:hover{
     color: var(--color-blanco);
 }
+
+.barra_busqueda {
+    background: var(--color-barra-lateral);
+    margin-left: 230px;
+    height: 60px;
+    transition: margin-left 0.5s ease, background 0.3s ease;
+    border-bottom: 1px var(--color-botones-1) solid;
+}
+header.min_busqueda{
+    background: var(--color-barra-lateral);
+    margin-left: 90px;
+    height: 60px;
+}
+
+/* BUSCADOR */
+
+header{
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.buscador {
+    /* background: green; */
+    display: flex;
+    justify-content: flex-end;
+    gap: 5px;
+    margin-right: 20px;
+}
+.buscador img{
+    background: var(--color-blanco);
+    max-width: 30px;
+    padding: 5px;
+    border-radius: 100%;
+}
+.buscador input{
+    /* background: yellow; */
+    height: 30px;
+    border-radius: 20px;
+    border: 1px var(--color-botones) solid;
+    padding: 10px;
+}
+.buscador input::placeholder{
+    padding: 1px;
+}
+/* main */
+main{
+    margin-left: 230px;
+    padding: 20px;
+}
+main.min-main{
+    margin-left: 70px;
+}
+
