--- a/views/home.html
+++ b/views/home.html
@@ -72,7 +72,21 @@
         </div>
     </header>
     <main class="caja_main">
-        
+        <h1>Studio Ghibli</h1>
+        <br> 
+        <br>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi rerum voluptatum eos soluta exercitationem mollitia aut, doloremque tempora atque consectetur sed ipsa accusamus, odio a quis voluptates saepe at velit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, illo nihil. Eius suscipit non vero ratione mollitia fugiat nesciunt aperiam amet voluptates quae beatae quidem, laudantium sit, earum adipisci distinctio. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi accusantium exercitationem libero pariatur aliquam blanditiis possimus corrupti! Distinctio, reiciendis quos! Provident voluptatum id ipsum assumenda doloremque iste quidem totam quia. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda porro amet alias ducimus sequi at repellendus sit ad, laudantium, eius nulla nobis quia necessitatibus qui, consectetur deleniti laborum neque excepturi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt iure id numquam pariatur, nemo iusto reiciendis ex quas necessitatibus hic, fugiat, doloremque repudiandae voluptates eveniet! Impedit modi non officia voluptate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque blanditiis quod sapiente impedit ipsam inventore ratione maiores assumenda ullam eligendi voluptatibus laborum sint placeat perspiciatis reiciendis iure, ducimus voluptatem quas. Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae corporis assumenda numquam? Aut itaque perspiciatis ipsam vitae, saepe, numquam doloremque odit neque deleniti ex impedit repellendus aliquid autem nisi veritatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, laboriosam veritatis, nostrum magnam, provident similique expedita enim perferendis eum quo sunt! Repudiandae iure quo atque at explicabo rem assumenda perferendis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat doloribus deleniti autem dolorum ex atque iusto quos voluptatum. Ab sint aspernatur quas accusantium, omnis totam atque blanditiis maxime recusandae praesentium. lorem  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio molestias deleniti architecto placeat cupiditate similique sint, fugit quis voluptatum facere sapiente adipisci laboriosam ipsa nemo, tempora exercitationem, molestiae aut beatae.</p>
+        <br>
+        <br>
+        <br>
+        <div class="nolose">
+            <div class="tu_dimelo"> </div>
+            <div class="tu_dimelo_1"> </div>
+            <div class="tu_dimelo_2"> </div>
+            <div class="tu_dimelo_3"> </div>
+            <div class="tu_dimelo_4"> </div>
+            <div class="tu_dimelo_5"> </div>
+        </div>
     </main>
     <script src="../javascript/menu.js"></script>
 </body>
