--- a/css/style2.css
+++ b/css/style2.css
@@ -243,57 +243,33 @@ header{
     padding: 1px;
 }
 /* main */
-main{
+main {
     margin-left: 250px;
     padding: 20px;
     transition: margin-left 0.5s ease;
+    min-height: 93.3vh;            
 }
-main.min-main{
+
+main.min-main {
     margin-left: 90px;
 }
-.caja_main{
+
+.caja_main {
     /* background: sandybrown; */
     height: 710px;
 }
-
-.fade-up {
-    /* background: red; */
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 0;
-    transform: translateY(40px);
-    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
-    will-change: opacity, transform;
-  }
-  .fade-up.show {
-    opacity: 1;
-    transform: translateY(0);
-    /* transition: opacity 0.1s ease-in, transform 0.7s ease-in; */
-  }
-  .fade-up h1{
-    /* background: blue; */
-    width: 80%;
-    display: flex;
+.fade-up{
+    /* background: rebeccapurple; */
+    position: relative;
+    color: rgb(0, 0, 0);
+    top: 5%;
+    left: 10%;
     text-align: center;
-    font-size: 100px;
-    font-family: "confortaa-light";
-  }
-  .totoro{
-    /* background: yellow; */
-    width: 500px;
-  }
-  .totoro img{
-    /* background: yellow; */
-    max-width: 350px;
-  }
-  
-  /* Se activa cuando aparece en pantalla */
-  .fade-up.show {
-    opacity: 1;
-    transform: translateY(0);
-  }
+    width: 1200px;
+    font-size: 50px;
+    font-family: "confortaa-bold";
+}
+
+
 
 
