--- a/views/home.html
+++ b/views/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style2.css">
     <link rel="stylesheet" href="../css/pink.css">
+    <link rel="stylesheet" href="../css/responsive.css">
     <link rel="icon" href="../storage/img/4d6e1b00ca69ff2651584e0374567c4a.png" type="image/x-icon">
     <title>Home Ghibli</title>
 </head>
@@ -74,9 +75,6 @@
     <main class="caja_main">
         <div class="fade-up">
             <h1>Bienvenido A Studio Ghibli</h1>
-        </div>
-        <div class="fade-up totoro">
-            <img src="../storage/img/♡︎.png" alt="">
         </div>
     </main>
     <script src="../javascript/menu.js"></script>
