--- a/views/home.html
+++ b/views/home.html
@@ -76,6 +76,37 @@
         <div class="fade-up">
             <h1>Bienvenido A Studio Ghibli</h1>
         </div>
+        <article class="article_caja">
+            <figure class="figure_caja">
+                <div class="queesghibli">
+                    <h1>¿Que es Studio Ghibli?</h1>
+                </div>
+            </figure>
+            <div class="descripcion">
+                <p> Studio Ghibli es un estudio japonés de animación reconocido mundialmente por sus películas llenas de magia, emoción, mensajes profundos y un estilo visual único. Fundado en 1985, Ghibli se ha ganado el corazón de millones de personas gracias a historias que exploran temas como la naturaleza, el crecimiento personal, la guerra, la espiritualidad, y la importancia de la familia y la amistad. A lo largo de los años, sus películas se han convertido en clásicos del cine de animación, y muchas de ellas han sido aclamadas tanto por la crítica como por el público, ganando premios importantes como el Oscar. </p>
+                <img id="imagen-tema" src="../storage/img/totoro.png" alt="">
+            </div>
+            <div class="Historia">
+                <h1>Historia De Ghibli</h1>
+            </div>
+            <div class="Produccion">
+                <p>Studio Ghibli fue fundado oficialmente en 1985 por tres figuras clave de la industria del cine japonés: Hayao Miyazaki, Isao Takahata y el productor Toshio Suzuki. El estudio surgió luego del enorme éxito de la película Nausicaä del Valle del Viento (1984), que aunque no fue producida directamente por Ghibli, sí fue la semilla que inspiró su creación. Desde el principio, el objetivo del estudio fue claro: crear películas animadas de alta calidad que fueran tanto visualmente impresionantes como emocionalmente profundas. A diferencia de otras productoras, Ghibli se enfocó en el trabajo artesanal, dibujando a mano la mayor parte de sus animaciones, cuidando cada detalle y manteniendo siempre un fuerte compromiso artístico.</p>
+                <div class="Creadores">
+                    <div class="creador_1">
+                        <img src="../storage/img/Hayao_Miyazaki_cropped_1_Hayao_Miyazaki_201211.jpg" alt="">
+                        <p>Hayao Miyazaki</p>
+                    </div>
+                    <div class="Creador_2">
+                        <img src="../storage/img/productor3.jpg" alt="">
+                        <p>Isao Takahata</p>
+                    </div>
+                    <div class="Creador_3">
+                        <img src="../storage/img/productor 2.jpg" alt="">
+                        <p>Toshio Suzuki</p>
+                    </div>
+                </div>
+            </div>
+        </article>
     </main>
     <script src="../javascript/menu.js"></script>
 </body>
