--- a/css/category.css
+++ b/css/category.css
@@ -43,7 +43,7 @@ body{
     transition: opacity 0.5s ease, width 0.5s ease;
     font-family: "confortaa-bold";
 }
-.barra_lateral span.oculto{
+.mini_barra_lateral span.oculto{
     opacity: 0;
     width: 0;
 }
@@ -242,3 +242,43 @@ header{
 .buscador input::placeholder{
     padding: 1px;
 }
+main {
+    margin-left: 250px;
+    padding: 20px;
+    transition: margin-left 0.5s ease;
+    min-height: 93.3vh;            
+}
+
+main.min-main {
+    margin-left: 90px;
+}
+
+/* API */
+
+.elh1{
+    text-align: center;
+}
+
+main{
+    display: flex;
+    gap: 5%;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+    justify-content: center;
+}
+.image-container{
+    display: flex;
+
+}
+
+.image-container img{
+    width: 100%;
+}
+
+article{
+    margin-bottom: 50px;
+    width: 20%;
+    padding: 20px;
+    box-shadow: 0px 0px 1px #000;
+}
+
