--- a/views/CategoryPage.html
+++ b/views/CategoryPage.html
@@ -69,5 +69,13 @@
             <input type="text" placeholder="Buscas algo?">
         </div>
     </header>
+    <main>
+        <h1>Peliculas Romanticas</h1>
+        <div class="peliculas-romanticas" id="romanticas">
+
+        </div>
+    </main>
+    <script src="../javascript/categorymenu.js"></script>
+    <script src="../javascript/main.js"></script>
 </body>
 </html>
