--- a/css/category.css
+++ b/css/category.css
@@ -276,7 +276,13 @@ main{
 }
 
 article{
+    font-family: "confortaa-light";
     margin-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
     width: 20%;
     padding: 20px;
     box-shadow: 0px 0px 1px #000;
