--- a/views/CategoryPage.html
+++ b/views/CategoryPage.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/category.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/pinkymode.css">
+    <link rel="icon" href="../storage/img/4d6e1b00ca69ff2651584e0374567c4a.png" type="image/x-icon">
+    <title>Categories</title>
 </head>
 <body>
     <div class="barra_lateral" >
